modify home navbar

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -10,5 +10,5 @@
     <li><a href="/donations">Donations</a></li>
     <li><a href="/job">Job</a></li>
   </ul>
-  <button class="sign-in-btn">Sign In</button>
+  <button class="sign-in-btn"><a href="/signup">Sign In</a></button>
 </nav>
