--- a/public/AdminJob.css
+++ b/public/AdminJob.css
@@ -8,74 +8,8 @@ body {
     min-height: 100vh;
 }
 
-.sidebar {
-    background: #4e46dc;
-    color: #fff;
-    width: 250px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-.sidebar-header {
-    padding: 20px;
-    text-align: center;
-}
-
-.sidebar-header .logo img {
-    width: 200px;
-}
-
-.sidebar-nav ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-
-.sidebar-nav ul li {
-    padding: 15px 20px;
-}
-
-.sidebar-nav ul li a {
-    color: #fff;
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-}
-
-.sidebar-nav ul li a i {
-    margin-right: 10px;
-}
-
-.sidebar-nav ul li a:hover,
-.sidebar-nav ul li a.active {
-    background: #3730a3;
-    border-radius: 5px;
-}
-
-.sidebar-footer {
-    padding: 20px;
-    text-align: center;
-}
-
-.sidebar-footer .user-info {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-}
-
-.sidebar-footer .user-info img {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-}
-
-.sidebar-footer .view-profile {
-    color: #fff;
-    text-decoration: none;
-    margin-top: 10px;
-    display: inline-block;
+.container {
+    margin-left: 250px;
 }
 
 .card {
