--- a/views/AdminNewJob.ejs
+++ b/views/AdminNewJob.ejs
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="/AdminJob.css" />
     <link rel="stylesheet" href="/sidebar.css" />
   </head>
+
   <body>
     <div class="dashboard-container">
       <%- include("partials/sidebar.ejs") %>
@@ -24,13 +25,10 @@
           <div class="col-md-8">
             <div class="card mt-5">
               <div class="card-header">
-                <h3>Edit/Add Job</h3>
+                <h3>Create Job Post</h3>
               </div>
               <div class="card-body">
-                <form
-                  method="POST"
-                  action="/admin/<%= jobData._id %>?_method=PUT"
-                >
+                <form method="POST" action="/admin/post">
                   <div class="form-group">
                     <label for="jobName">Title</label>
                     <input
@@ -38,20 +36,7 @@
                       class="form-control"
                       id="jobName"
                       placeholder="Enter Job name"
-                      value="<%= jobData.title %>"
                       name="title"
-                    />
-                  </div>
-
-                  <div class="form-group">
-                    <label for="jobLocation">Location</label>
-                    <input
-                      type="text"
-                      class="form-control"
-                      id="jobLocation"
-                      placeholder="Enter job location"
-                      value="<%= jobData.location %>"
-                      name="location"
                     />
                   </div>
                   <div class="form-group">
@@ -60,9 +45,28 @@
                       type="text"
                       class="form-control"
                       id="jobLocation"
-                      placeholder="Enter job location"
-                      value="<%= jobData.company %>"
+                      placeholder="Enter company name"
                       name="company"
+                    />
+                  </div>
+                  <div class="form-group">
+                    <label for="jobLocation">Salary</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="jobLocation"
+                      placeholder="Enter Job salary"
+                      name="salary"
+                    />
+                  </div>
+                  <div class="form-group">
+                    <label for="jobLocation">Location</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="jobLocation"
+                      placeholder="Enter job location"
+                      name="location"
                     />
                   </div>
                   <div class="form-group">
@@ -73,18 +77,15 @@
                       rows="5"
                       placeholder="Enter job description"
                       name="description"
-                    >
-                    <%= jobData.description %>
-                    </textarea>
+                    ></textarea>
                   </div>
                   <div class="form-group">
                     <label for="jobImage">Image</label>
                     <input
                       type="text"
+                      placeholder="URL/images..."
                       class="form-control-file"
                       id="eventImage"
-                      placeholder="Enter URL/images..."
-                      value="<%= jobData.image %>"
                       name="image"
                     />
                   </div>
