--- a/views/display_event_application.ejs
+++ b/views/display_event_application.ejs
@@ -4,87 +4,56 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alumni Connect - Event Management</title>
-    <link rel="stylesheet" href="/eventmanagement.css" />
-    <link rel="stylesheet" href="/adminDashboard.css"/>
+    <link
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
+
+    <link rel="stylesheet" href="/eventmanagement.css" />
+    <link rel="stylesheet" href="/adminDashboard.css" />
+    <link rel="stylesheet" href="/sidebar.css" />
   </head>
   <body>
     <div class="dashboard-container">
-      <aside class="sidebar">
-        <div>
-        <div class="sidebar-header">
-          <div class="logo">
-            <img src="" alt="Alumni Connect Logo" />
-          </div>
-        </div>
-        <nav class="sidebar-nav">
-          <ul>
-            <li>
-              <a href="./AdminDashboard.html" class="active"
-                ><i class="fas fa-tachometer-alt"></i> Dashboard</a
-              >
-            </li>
-            <li>
-              <a href=""><i class="fas fa-users"></i> Alumni</a>
-            </li>
-            <li>
-              <a href="#"><i class="fas fa-briefcase"></i> Jobs</a>
-            </li>
-            <li>
-              <a href="#"><i class="fas fa-comments"></i> Forum</a>
-            </li>
-            <li>
-              <a href="./eventManagement.html"
-                ><i class="fas fa-calendar-alt"></i> Events</a
-              >
-            </li>
-          </ul>
-        </nav>
-      </div>
-      <div class="sidebar-footer">
-        <div class="user-info">
-          <img src="../assets/images/profilephoto.jpg" alt="User" />
-          <div style="position: relative;top: 5px;">
-            <div>Amanda</div>
-            <a style="position: relative; bottom: 10px; opacity: 0.6;" href="#" class="view-profile">View profile</a>
-          </div>
-        </div>
-        
-      </div>
-        </aside>
-      </aside>
+      <%- include("partials/sidebar.ejs") %>
 
       <main class="main-content">
         <header class="main-header">
           <h1>All Application for event</h1>
-         
         </header>
 
         <% if(application.length==0){ %>
-            <div style="height: 80%; display: flex; justify-content: center;align-items: center;">
-                <h1 style="font-size: 40px; opacity: 0.7;">No Applications</h1>
-            </div>
-            <% } %>
+        <div
+          style="
+            height: 80%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+          "
+        >
+          <h1 style="font-size: 40px; opacity: 0.7">No Applications</h1>
+        </div>
+        <% } %>
         <section class="events-grid">
           <% for(data of application){ %>
           <div class="event-card">
             <div class="event-info">
               <h3><%= data.name %></h3>
-              <p> <u>Email:</u>  <%=data.email %></p>
-              <p> <u>Student ID:</u><%= data.studentID %> </p>
-              <p> <u>Deparment:</u><%= data.department %> </p>
-              <p> <u>Year:</u><%= data.year %> </p>
-              <p> <u>Contact:</u><%= data.contact[0]%> </p>
-              <p> <u>Student ID:</u><%= data.studentID %> </p>
-              <p> <u>Why he want to join :</u><%= data.motivation %> </p>
-    
+              <p><u>Email:</u> <%=data.email %></p>
+              <p><u>Student ID:</u><%= data.studentID %></p>
+              <p><u>Deparment:</u><%= data.department %></p>
+              <p><u>Year:</u><%= data.year %></p>
+              <p><u>Contact:</u><%= data.contact[0]%></p>
+              <p><u>Student ID:</u><%= data.studentID %></p>
+              <p><u>Why he want to join :</u><%= data.motivation %></p>
             </div>
           </div>
           <% } %>
