--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar">
   <div class="logo">
-    <img src="../assets/images/logo.png" alt="Alumni Connect Logo" />
+    <img src="../assets/images/logo.png " alt="Alumni Connect Logo" />
   </div>
   <ul class="nav-links">
     <li><a href="/home">Home</a></li>
@@ -10,5 +10,5 @@
     <li><a href="/donations">Donations</a></li>
     <li><a href="/job">Job</a></li>
   </ul>
-  <button class="sign-in-btn"><a href="/signup">Sign In</a></button>
+  <button class="sign-in-btn"><a href="/login">Sign In</a></button>
 </nav>
