--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -1,10 +1,7 @@
 <aside class="sidebar">
   <div class="sidebar-header">
     <div class="logo">
-      <img
-        src="../assets/images/logo_afterLogIn.png"
-        alt="Alumni Connect Logo"
-      />
+      <img src="/logo_afterLogIn.png" alt="Alumni Connect Logo" />
     </div>
   </div>
   <nav class="sidebar-nav">
@@ -28,7 +25,7 @@
   </nav>
   <div class="sidebar-footer">
     <div class="user-info">
-      <img src="../assets/images/profilephoto.jpg" alt="User" />
+      <img src="/profilephoto.jpg" alt="User" />
       <span>Amanda</span>
       <a href="#" class="view-profile"><i class="fas fa-cog"></i> </a>
     </div>
